--- a/trunk/_PAFRES/appinfo.tmpl.ini
+++ b/trunk/_PAFRES/appinfo.tmpl.ini
@@ -5,7 +5,7 @@ Version=0.9.8
 [Details]
 Name=Appetizer
 Publisher=Appetizer Project
-Homepage=http://appetizer.sourceforge.net
+Homepage=http://app.etizer.org
 Category=Utilities
 Description=Appetizer is a free application launcher, or dock, for Windows. It allows organizing and launching your applications and other shortcuts into a convenient dock. 
 
