--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -184,8 +184,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswud&quot;;&quot;$(BOOST_ROOT)&quot;;C:\WINDDK\3790.1830\inc\mfc42"
-				PreprocessorDefinitions="wxUSE_GUI=1;__WXDEBUG__"
+				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswud&quot;;&quot;$(BOOST_ROOT)&quot;;./third_party"
+				PreprocessorDefinitions="wxUSE_GUI=1;__WXDEBUG__;WINNT"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
@@ -258,8 +258,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="1"
-				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswu&quot;;&quot;$(BOOST_ROOT)&quot;"
-				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1"
+				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswu&quot;;&quot;$(BOOST_ROOT)&quot;;./third_party"
+				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1;WINNT"
 				IgnoreStandardIncludePath="false"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
@@ -856,6 +856,51 @@
 						/>
 					</FileConfiguration>
 				</File>
+				<Filter
+					Name="process_util"
+					>
+					<File
+						RelativePath=".\utilities\process_util\ProcessUtil.cpp"
+						>
+						<FileConfiguration
+							Name="Unicode Debug|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								PrecompiledHeaderThrough="../../stdafx.h"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Unicode Release|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								PrecompiledHeaderThrough="../../stdafx.h"
+							/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath=".\utilities\process_util\SystemInfo.cpp"
+						>
+						<FileConfiguration
+							Name="Unicode Debug|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								UsePrecompiledHeader="0"
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Unicode Release|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								UsePrecompiledHeader="2"
+								PrecompiledHeaderThrough="../../stdafx.h"
+							/>
+						</FileConfiguration>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="third_party"
@@ -1458,12 +1503,28 @@
 					RelativePath=".\utilities\XmlUtil.h"
 					>
 				</File>
+				<Filter
+					Name="process_util"
+					>
+					<File
+						RelativePath=".\utilities\process_util\ProcessUtil.h"
+						>
+					</File>
+					<File
+						RelativePath=".\utilities\process_util\SystemInfo.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="third_party"
 				>
 				<File
 					RelativePath=".\third_party\simpleini\SimpleIni.h"
+					>
+				</File>
+				<File
+					RelativePath=".\third_party\StdString.h"
 					>
 				</File>
 				<File
