--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -5,6 +5,7 @@
 	Name="MiniLaunchBar"
 	ProjectGUID="{9923859F-06F8-437D-BD38-A5C2767F7051}"
 	RootNamespace="MiniLaunchBar"
+	AssemblyReferenceSearchPaths="&quot;.\Data\Tools&quot;"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -203,7 +204,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib wxbase28ud_net.lib wxregexud.lib psapi.lib c:\lua\lua5.1.lib c:\lua\lua51.lib"
+				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib wxbase28ud_net.lib wxregexud.lib psapi.lib c:\lua\lua5.1.lib"
 				OutputFile=".\Appetizer-debug.exe"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				GenerateDebugInformation="true"
@@ -259,11 +260,11 @@
 				Name="VCCLCompilerTool"
 				Optimization="1"
 				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswu&quot;;&quot;$(BOOST_ROOT)&quot;;./third_party"
-				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1;WINNT"
+				PreprocessorDefinitions="wxUSE_GUI=1;WINNT"
 				IgnoreStandardIncludePath="false"
 				RuntimeLibrary="0"
 				UsePrecompiledHeader="2"
-				PrecompiledHeaderThrough="../../stdafx.h"
+				PrecompiledHeaderThrough="stdafx.h"
 				DebugInformationFormat="0"
 			/>
 			<Tool
@@ -278,7 +279,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpng.lib wxzlib.lib wxjpeg.lib wxmsw28u_core.lib wxbase28u.lib wxtiff.lib wxmsw28u_adv.lib wxbase28u_net.lib wxregexu.lib psapi.lib c:\lua\lua5.1.lib c:\lua\lua51.lib"
+				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpng.lib wxzlib.lib wxjpeg.lib wxmsw28u_core.lib wxbase28u.lib wxtiff.lib wxmsw28u_adv.lib wxbase28u_net.lib wxregexu.lib psapi.lib c:\lua\lua5.1.lib"
 				OutputFile=".\Appetizer.exe"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
 				IgnoreAllDefaultLibraries="false"
@@ -336,6 +337,18 @@
 					<Tool
 						Name="VCCLCompilerTool"
 						UsePrecompiledHeader="2"
+						PrecompiledHeaderThrough="stdafx.h"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\ExtendedMenuItem.cpp"
+				>
+				<FileConfiguration
+					Name="Unicode Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
 						PrecompiledHeaderThrough="stdafx.h"
 					/>
 				</FileConfiguration>
@@ -1045,7 +1058,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="2"
-								PrecompiledHeaderThrough="../../stdafx.h"
+								PrecompiledHeaderThrough="..\..\stdafx.h"
 							/>
 						</FileConfiguration>
 					</File>
@@ -1067,6 +1080,7 @@
 							<Tool
 								Name="VCCLCompilerTool"
 								UsePrecompiledHeader="2"
+								PrecompiledHeaderThrough="..\..\stdafx.h"
 							/>
 						</FileConfiguration>
 					</File>
@@ -1524,6 +1538,10 @@
 			</File>
 			<File
 				RelativePath=".\Enumerations.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ExtendedMenuItem.h"
 				>
 			</File>
 			<File
