--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -5,7 +5,6 @@
 	Name="MiniLaunchBar"
 	ProjectGUID="{9923859F-06F8-437D-BD38-A5C2767F7051}"
 	RootNamespace="MiniLaunchBar"
-	AssemblyReferenceSearchPaths="&quot;.\Data\Tools&quot;"
 	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
@@ -207,6 +206,7 @@
 				AdditionalDependencies="version.lib comctl32.lib rpcrt4.lib winmm.lib advapi32.lib wsock32.lib wxpngd.lib wxzlibd.lib wxjpegd.lib wxtiffd.lib wxmsw28ud_core.lib wxbase28ud.lib wxmsw28ud_adv.lib wxbase28ud_net.lib wxregexud.lib psapi.lib c:\lua\lua5.1.lib"
 				OutputFile=".\Appetizer-debug.exe"
 				AdditionalLibraryDirectories="&quot;$(WXWIN)\lib\vc_lib&quot;"
+				IgnoreDefaultLibraryNames="LIBCMT.lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 			/>
