- Some strings were incorrectly tagged as localizable - Disabled wxWidgets GUI logging - Updated Help file for version 1.2
git-svn-id: https://appetizer.googlecode.com/svn@230 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/GenerateHelp.vcproj
+++ b/trunk/GenerateHelp.vcproj
@@ -184,7 +184,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswud&quot;;&quot;$(BOOST_ROOT)&quot;"
+				AdditionalIncludeDirectories="&quot;$(WXWIN)\include&quot;;&quot;$(WXWIN)\lib\vc_lib\mswud&quot;;./third_party"
 				PreprocessorDefinitions="WINVER=0x0400;wxUSE_GUI=1;__WXDEBUG__"
 				RuntimeLibrary="1"
 				DebugInformationFormat="4"
