- Now tries to detect the system locale the first time the app is launched - azApplication: Made some more functions available to Lua - azDialog: Some dialog functions are now available to Lua - Fixed: update detection code didn't run the first time the app was launched - Lua: Better error message if the script fails to load - Lua: Error message if user tries to load a UTF-8 file with BOM
git-svn-id: https://appetizer.googlecode.com/svn@237 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1425,6 +1425,18 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\lua_glue\azDialogs.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\lua_glue\azGlobal.cpp"
 					>
 					<FileConfiguration
@@ -2008,6 +2020,10 @@
 				>
 				<File
 					RelativePath=".\lua_glue\azApplication.h"
+					>
+				</File>
+				<File
+					RelativePath=".\lua_glue\azDialogs.h"
 					>
 				</File>
 				<File
