- Lua: Added tray icon context menu hook - Lua: Added System class with functions to kill locking processes, and to run a command - Done "Reveal target" plugin
git-svn-id: https://appetizer.googlecode.com/svn@238 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/MiniLaunchBar.vcproj
+++ b/trunk/MiniLaunchBar.vcproj
@@ -1677,6 +1677,18 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath=".\lua_glue\azSystem.cpp"
+					>
+					<FileConfiguration
+						Name="Unicode Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PrecompiledHeaderThrough="../stdafx.h"
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath=".\lua_glue\azWrapper.cpp"
 					>
 					<FileConfiguration
@@ -2048,6 +2060,10 @@
 				</File>
 				<File
 					RelativePath=".\lua_glue\azShortcut.h"
+					>
+				</File>
+				<File
+					RelativePath=".\lua_glue\azSystem.h"
 					>
 				</File>
 				<File
